# kernelCryptoTest

./: CMakeLists.txt  LICENSE  Makefile  README.md  client.cpp  crypto.h  demo.c  demo3.c  proxy.c  proxy1.c  test.py  test_client.cpp
src/: client.cpp  crypto.cpp  demo2.c  encfile.c  proxy.cpp  test_server.cpp
